# shiftenv

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dockerfile  env.py  inference.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt  run.py  validate_submission_extended.sh
graders/: __init__.py
grapher/: dependency_graph.graphml  grapher.py  migration_plan.json
grapher/test_folder/: api.py  formatter.py  main.py  processing.py  utils.py
grapher/test_folder/test2/: test.py
onepointtwo/: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
onepointtwo/server/: app.py  tasks.py
server/: app.py
server/tasks/easy/repo/: __init__.py  token_manager.py
server/tasks/easy/tests/: test_crypto.py
server/tasks/hard/repo/: calculator.py  data.py  model.py  test_calculator.py
server/tasks/hard/solution/: data.py  predict.py  train.py
server/tasks/medium/repo/: api_client.py
server/tools/: sandbox.py
tasks/: __init__.py
tasks/easy/: __init__.py
tasks/easy/repo/: crypto_utils.py  session.py
tasks/easy/tests/: __init__.py  grader.py
tasks/hard/: __init__.py
tasks/hard/repo/: predict.py  train.py
tasks/hard/solution/: model.py
tasks/hard/tests/: __init__.py  grader.py  test_calc_migrated.py  test_migration.py
tasks/medium/: __init__.py
tasks/medium/repo/: config.py  downloader.py  session_manager.py
tasks/medium/tests/: __init__.py  grader.py  test_api.py
tools/: call_graph.py  func_diff.py  lib_inspect.py  sandbox.py
