[project]
name = "openenv-migration-task"
version = "0.1.0"
description = "Library migration environment for Meta PyTorch Hackathon"

dependencies = [
    "openenv-core",
    "pytest",
    "requests",
    "httpx",
    "openai",
    "pydantic",
    "python-dotenv",
    "torch",
    "flask",
]


[tool.pytest.ini_options]
testpaths = ["tasks"]

[tool.setuptools]
packages = ["tools", "tasks"] # Ensure tasks/ folders are copied into the environment