[project]
name = "openenv-migration-task"
version = "0.1.0"
description = "Library migration environment for Meta PyTorch Hackathon"

dependencies = [
    "openenv-core",
    "pytest",
    "requests",
    "httpx",
    "openai",
    "pydantic",
    "python-dotenv",
    "torch",
    "flask",
]


[tool.pytest.ini_options]
testpaths = ["tasks"]

[tool.setuptools]
py-modules = ["graders"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "tasks*", "server*"]

[project.scripts]
server = "server.app:main"